# grpc-whisper

./: LICENSE  README.md  pyproject.toml
scripts/: generate_stubs.sh
src/: logger.py
src/client/: cli.py  utils.py
src/proto/transcription/: result.proto  service.proto
src/server/: app.py  cli.py  services.py  settings.py
src/whispers/: engine.py  enums.py  exceptions.py  modules_wrapper.py  utils.py
